metadata/force-app/main/default/objects/CustomName_nFsXE__c/CustomName_nFsXE__c.object-meta.xml
<CustomObject>
    <description>Description_qEwLU</description>
    <label>CustomLabel_goJRB</label>
    <nameField>
        <label>CustomLabel_goJRB</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_goJRBs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>