metadata/force-app/main/default/objects/CustomName_nFsXE__c/fields/CustomField_GAYSs__c.field-meta.xml
<CustomField>
    <fullName>CustomField_GAYSs__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldwKFbB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>