metadata/force-app/main/default/objects/CustomName_nFsXE__c/fields/CustomField_JpErS__c.field-meta.xml
<CustomField>
    <fullName>CustomField_JpErS__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldpZoCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>